<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:id="@+id/one"
            android:text="1"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/two"
            android:text="2"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/three"
            android:text="3"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/plus"
            android:text="+"
            style="@style/KeyboardButtonStyle"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/four"
            android:text="4"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/five"
            android:text="5"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/six"
            android:text="6"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/minus"
            android:text="-"
            style="@style/KeyboardButtonStyle"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/seven"
            android:text="7"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/eight"
            android:text="8"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/nine"
            android:text="9"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/multiply"
            android:text="*"
            style="@style/KeyboardButtonStyle"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/delete"
            android:text="D"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/zero"
            android:text="0"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/divide"
            android:text="/"
            style="@style/KeyboardButtonStyle"/>
        <TextView
            android:id="@+id/equal"
            android:text="="
            style="@style/KeyboardButtonStyle"/>
    </TableRow>
    
</TableLayout>