<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity">

    <TextView
        android:id="@+id/computations_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/DisplayStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/portrait_midscreen" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/portrait_midscreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/portrait_midscreen"/>

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portrait_midscreen"
        android:gravity="center">
        <include
            layout="@layout/rows"/>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>